test_regress/t/t_assert_disable_bad.out
%Error: t/t_assert_disable_bad.v:27:38: disable iff expression before property call and in its body is not legal
                                      : ... note: In instance 't'
   27 |    assert property (disable iff (val == 0) check(1, 1));
      |                                      ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
